@@ -1,5 +1,10 @@
 2011-01-04  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/disk/i386/pc/biosdisk.c (GRUB_MOD_INIT): Workaround buggy
+	BIOSes.
+
+2011-01-04  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/lib/reed_solomon.c (grub_reed_solomon_add_redundancy):
 	Prevent overflow.
 	(grub_reed_solomon_recover): Likewise.
